refresh java streams and basic